--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/iconT.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="TumaRide s a platform that allows travelers to earn while delivering packages of businnnes to their destination" />
+    <meta name="description" content="TumaRide is a platform that allows travelers to earn while delivering packages of businnnes to their destination" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
